[package]
name = "pond-cache"
description = "A simple, local, persistent cache for Rust"
version = "0.1.0"
edition = "2021"
authors = ["Mike Rivnak <rivnakm1@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/mrivnak/pond"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
uuid = { version = "1.3.3", features = ["v5", "serde"] }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.29.0", features = ["winsqlite3"] }

[dev-dependencies]
rand = "0.8.5"
