[package]
name = "pond-cache"
description = "A simple, local, persistent cache for Rust"
version = "0.0.0"
edition = "2021"
authors = ["Mike Rivnak <rivnakm1@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/mrivnak/pond"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
uuid = { version = "1.6.1", features = ["serde"] }

[dev-dependencies]
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4"] }

