[package]
name = "pond-cache"
description = "A simple, local, persistent cache for Rust"
version = "0.0.0"
edition = "2021"
authors = ["Mike Rivnak <rivnakm1@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/mrivnak/pond"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { version = "0.6.0", default-features = false, features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["blob", "bundled"] }
serde = "1.0.202"

[dev-dependencies]
bitcode = { version = "0.6.0", features = ["serde"] }
rand = "0.9.0"
serde = { version = "1.0.202", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

